[feat] pytorch support

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,78 @@
 
 *.dll
 *.pyd
+agent_visibility_test.py
+animation_test.py
+block_type_test.py
+braitenberg_simulation.py
+build_test.py
+cart_test.py
+chat_reward.py
+chunk_test.py
+craft_work.py
+decision_tree_test.py
+default_world_test.py
+depth_map_runner.py
+discrete_3d_test.py
+dp.py
+DQN.py
+drawing_test.py
+file_test.py
+game.py
+hit_test.py
+human_action.py
+inventory_test.py
+MalmoPython.lib
+malmoutils.py
+manual_input_test.py
+MazeRunner.py
+mission_quit_command_example.py
+mob_fun.py
+mob_zoo.py
+mouse_steering_test.py
+moving_target_test.py
+multi_agent_test.py
+MultiMaze.py
+note_block_test.py
+overclock_test.py
+patchwork_quilt.py
+quit_from_reaching_position_test.py
+radar_test.py
+render_speed_test.py
+reward_for_discarding_items_test.py
+reward_for_items_test.py
+reward_for_mission_end_test.py
+robust_frames.py
+run_mission.py
+sample_missions_loader.py
+tabular_q_learning.py
+tccopilot.py
+team_reward_test.py
+teleport_test.py
+test.py
+to_string_test.py
+train.py
+tsp_race.py
+turn_based_test.py
+Tutorial.pdf
+tutorial_1.py
+tutorial_2.py
+tutorial_3.py
+tutorial_4.py
+tutorial_4_solved.py
+tutorial_5.py
+tutorial_5_solved.py
+tutorial_6.py
+tutorial_6.xml
+tutorial_7.py
+tutorial_8.py
+two_diggers.py
+use_file.py
+*.tgz
+*.pth
+*.mp4
+*.txt
+*.out
+*.sh
+mission_records/29e4fd16-c9b0-47f2-961a-c03d8dcc62d5/missionInit.xml
+*.pyc
